<resources>
    <string name="app_name" translatable="false">Utility App</string>
    <string name="todayWeatherUrl" translatable="false">https://api.open-meteo.com/v1/forecast?latitude=%s&amp;longitude=%s&amp;hourly=temperature_2m,weathercode</string>
    <string name="weekWeatherUrl" translatable="false">https://api.open-meteo.com/v1/forecast?latitude=%s&amp;longitude=%s&amp;daily=weathercode,temperature_2m_max,temperature_2m_min&amp;timezone=auto&amp;start_date=%s&amp;end_date=%s</string>
    <string name="weatherNavigationText">Weather</string>
    <string name="Notes">Note</string>
    <string name="noPermissionToLocation">You did not provide permission to access location</string>
    <string name="failedToFetchWeather">Failed to fetch today weather</string>
    <string name="hourFormat" translatable="false">%d:00</string>
    <string name="temperatureFormat" translatable="false">%s C</string>
    <string name="Today">Today</string>
    <string name="NextSevenDays">Next seven days</string>
    <string name="DateFormat" translatable="false">dd-MM</string>
    <string name="weeklyTemperatureFormat" translatable="false">%s / %s C</string>
    <string name="title_activity_notes">NotesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetchWeatherInfo">Fetching weather info</string>
    <string name="TitleLabel">Title:</string>
    <string name="CategoryLabel">Category:</string>
    <string name="areYouSure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="TitleHint">Title</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="ContentHint">Content</string>
    <string name="addCategory">Add category</string>
    <string name="NameHint">Name</string>
    <string name="red">red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="selectColor">Select color</string>
    <string name="selectCategory">Select category</string>
    <string name="addCategoryValidationMessage">Color and name are required!</string>
    <string name="AddEditNoteValidationMessage">All fields are required!</string>
    <string name="authentication_failed">You failed to authenticate</string>
    <string name="no_biometrics">You don\'t have any biometric authorization set up</string>
    <string name="no_biometric_hardware">There is no suitable hardware to handle the biometric authorization.</string>
    <string name="biometric_hardware_unavailable">Biometric device unavailable</string>
    <string name="biometrics_title">Authenticate</string>
    <string name="biometrics_description">Don\'t be shy</string>
    <string name="NegativeBiometrics">I\'m shy</string>
    <string name="reloadWeather">Do you wish to reload the weather?</string>
</resources>